# ESPy-Nexus

./: ESPy-Nexus.code-workspace  README.md
esp32_firmware/: platformio.ini
esp32_firmware/src/: main.cpp
python_host/: README.md  pyproject.toml  requirements-dev.txt  requirements.txt
python_host/analyzer/serial/: downlink.py
python_host/analyzer/serial/downlink/: burst_loss.py  goodput.py  jitter.py  out_of_order.py  pdr.py  pipeline.py  simulation.py  timing_trends.py
python_host/playground/: serial_analyzer.py
python_host/src/espy_nexus/: main.py
python_host/src/espy_nexus/control_plane/: connection_manager.py  serial_cp.py
python_host/src/espy_nexus/core/: config.py
python_host/src/espy_nexus/data_plane/: base.py  serial_dp.py
python_host/src/espy_nexus/metrics/: burst_loss.py  goodput.py  jitter.py  out_of_order.py  pdr.py  simulation.py  timing_trends.py
python_host/src/espy_nexus/pipeline/: downlink.py
python_host/src/espy_nexus/playground/: run_integration_test.py  run_matrix.py  serial_analyzer.py
python_host/src/espy_nexus/runner/: engine.py  matrix.py
python_host/tests/analyzer/serial/: test_downlink.py
python_host/tests/analyzer/serial/downlink/: test_burst_loss.py  test_goodput.py  test_jitter.py  test_out_of_order.py  test_pdr.py  test_timing_trends.py
python_host/tests/metrics/: test_burst_loss.py  test_goodput.py  test_jitter.py  test_out_of_order.py  test_pdr.py  test_timing_trends.py
